--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "formik",
+  "name": "@johnrom/formik",
   "description": "Forms in React, without tears",
-  "version": "1.5.0",
+  "version": "1.5.0-typed-2",
   "license": "MIT",
   "author": "Jared Palmer <jared@palmer.net>",
   "repository": "jaredpalmer/formik",
