Mutable Source pt 1. Currently possible to get stale data.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}/app/context-selector"
+            "webRoot": "${workspaceFolder}/app/mutable-source"
         }
     ]
 }
