--- a/app/context-selector/tsconfig.json
+++ b/app/context-selector/tsconfig.json
@@ -18,7 +18,7 @@
     "baseUrl": "../../",
     "paths": {
       "formik": [
-        "packages/@formik/context-selector/src"
+        "packages/formik/src"
       ],
       "@formik/core": [
         "packages/@formik/core/src"
