--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "test:watchAll": "lerna run test --stream --no-sort -- --watchAll",
     "test:vscode": "lerna run test --stream --no-sort --",
     "build": "lerna run build",
+    "build:watch": "lerna run build:watch --stream --no-sort",
     "prepublish": "lerna run prepublish",
     "format": "prettier --write 'examples/**/*' 'packages/*/src/**/*' 'docs/src/**/*.{ts,tsx,js,jsx,md,mdx}' 'app/*/pages/**/*'  'packages/*/test/**/*' 'README.md'",
     "changeset": "changeset",
@@ -51,7 +52,7 @@
     "cypress": "cypress run",
     "precommit": "lint-staged",
     "cypress:open": "cypress open",
-    "start:app": "yarn --cwd ./app/react-context-selector run start",
+    "start": "lerna run start --stream --no-sort",
     "unlink": "yarn --cwd node_modules/react unlink && yarn --cwd packages/formik unlink"
   },
   "lint-staged": {
@@ -61,6 +62,7 @@
     ]
   },
   "dependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "webpack": "^5.20.1"
   }
 }
