Fix getFieldProps. Fix imperativeMethods once and for all (famous last words). Fix tests and build processes. Fix types to use legacy FormikContextType instead of changing types. Fix a circular reference issue. Update tests from main branch. Fix arrayHelpers.pop

--- a/packages/@formik/core/package.json
+++ b/packages/@formik/core/package.json
@@ -26,8 +26,9 @@
   "scripts": {
     "test": "tsdx test --env=jsdom",
     "test:watch": "npm run test -- --watchAll",
-    "start": "tsdx watch --tsconfig tsconfig.build.json --verbose --noClean",
+    "start": "npm run build:watch",
     "build": "tsdx build --tsconfig tsconfig.build.json",
+    "build:watch": "tsdx watch --tsconfig tsconfig.build.json --verbose --noClean",
     "lint": "tsdx lint",
     "prepublish": "npm run build"
   },
