--- a/packages/formik/package.json
+++ b/packages/formik/package.json
@@ -25,10 +25,9 @@
     "react": ">=16.8.0"
   },
   "scripts": {
-    "test": "tsdx test --env=jsdom",
-    "test:watch": "npm run test -- --watchAll",
-    "start": "tsdx watch --tsconfig tsconfig.build.json --verbose --noClean",
+    "start": "npm run build:watch",
     "build": "tsdx build --tsconfig tsconfig.build.json",
+    "build:watch": "tsdx watch --tsconfig tsconfig.build.json --verbose --noClean",
     "lint": "tsdx lint",
     "prepublish": "npm run build"
   },
