--- a/packages/formik-native/package.json
+++ b/packages/formik-native/package.json
@@ -31,7 +31,7 @@
     "react": ">=16.8.0"
   },
   "dependencies": {
-    "@johnrom/formik-v3": "^3.0.0-refs2"
+    "@johnrom/formik-v3": "^3.1.0-types1"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^0.0.5",
