--- a/website/package.json
+++ b/website/package.json
@@ -69,6 +69,7 @@
     "use-onclickoutside": "^0.3.1"
   },
   "devDependencies": {
+    "@johnrom/remark-code-import": "^0.4.0-beta1",
     "@tailwindcss/ui": "^0.3.0",
     "@types/body-scroll-lock": "^2.6.1",
     "@types/mdx-js__react": "^1.5.1",
