--- a/packages/formik/package.json
+++ b/packages/formik/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formik",
+  "name": "@johnrom/formik-v3",
   "description": "Build forms in React, without the tears",
   "version": "3.1.0-types10",
   "license": "Apache-2.0",
